@@ -460,6 +460,13 @@
       \item \code{decompose()} used with a series of a non-integer
       number of periods returned a seasonal component shorter than the
       original series.  (Reported by Rob Hyndman.)
+      
+      \item \code{R CMD check} on a multi-architecture installation now
+      skips the user's \file{.Renviron} file for the
+      architecture-specific tests (which do read the 
+      architecture-specific \file{Renviron.site} files).  This is
+      consistent with single-architecture checks, which use
+      \option{--no-environ}.
     }
   }
 }
